force-app/main/default/objects/ActiveCamp__Dashboard_Log__c/ActiveCamp__Dashboard_Log__c.object-meta.xml
<CustomObject>
    <label>Dashboard Log</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Dashboard Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dashboard Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>