force-app/main/default/objects/ActiveCamp__Dashboard_Log__c/fields/ActiveCamp__Error_Log__c.field-meta.xml
<CustomField>
    <fullName>ActiveCamp__Error_Log__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Error Log</label>
    <referenceTo>ActiveCamp__Error_Log__c</referenceTo>
    <relationshipLabel>Dashboard Logs</relationshipLabel>
    <relationshipName>Dashboard_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>