force-app/main/default/objects/ActiveCamp__Dashboard_Log__c/fields/ActiveCamp__Failed_Records__c.field-meta.xml
<CustomField>
    <fullName>ActiveCamp__Failed_Records__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Failed Records</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>