force-app/main/default/objects/ActiveCamp__Dashboard_Log__c/fields/ActiveCamp__Initiated_At_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>ActiveCamp__Initiated_At_Timestamp__c</fullName>
    <label>Initiated At Timestamp</label>
    <type>DateTime</type>
</CustomField>