force-app/main/default/objects/ActiveCamp__Dashboard_Log__c/fields/ActiveCamp__Object_Type__c.field-meta.xml
<CustomField>
    <fullName>ActiveCamp__Object_Type__c</fullName>
    <label>Object Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Lead</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>