force-app/main/default/objects/ActiveCamp__Dashboard_Log__c/fields/ActiveCamp__Sync_Direction__c.field-meta.xml
<CustomField>
    <fullName>ActiveCamp__Sync_Direction__c</fullName>
    <label>Sync Direction</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Inbound</fullName>
            </value>
            <value>
                <fullName>Outbound</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>