force-app/main/default/objects/ActiveCamp__Dashboard_Log__c/fields/ActiveCamp__Sync_Status__c.field-meta.xml
<CustomField>
    <fullName>ActiveCamp__Sync_Status__c</fullName>
    <label>Sync Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Successful</fullName>
            </value>
            <value>
                <fullName>Failure</fullName>
            </value>
            <value>
                <fullName>Partial</fullName>
            </value>
            <value>
                <fullName>Started</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>