force-app/main/default/objects/ActiveCamp__Dashboard_Log__c/fields/ActiveCamp__Total_Records_Batched__c.field-meta.xml
<CustomField>
    <fullName>ActiveCamp__Total_Records_Batched__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Records Batched</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>